login-service.yaml
# login-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
      - name: login-service
        image: login-service:latest
        ports:
        - containerPort: 8081
---
# ClusterIP for Ingress
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  type: ClusterIP
  selector:
    app: login-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
# NodePort for direct access
apiVersion: v1
kind: Service
metadata:
  name: login-service-nodeport
spec:
  type: NodePort
  selector:
    app: login-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 30001
