register-service.yaml
# register-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: register-service
  template:
    metadata:
      labels:
        app: register-service
    spec:
      containers:
      - name: register-service
        image: register-service:latest
        ports:
        - containerPort: 8082
---
# ClusterIP for Ingress
apiVersion: v1
kind: Service
metadata:
  name: register-service
spec:
  type: ClusterIP
  selector:
    app: register-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082

---
# NodePort for direct access
apiVersion: v1
kind: Service
metadata:
  name: register-service-nodeport
spec:
  type: NodePort
  selector:
    app: register-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
      nodePort: 30002
